<resources>
    <string name="app_name">EcoStyle</string>
    <string name="recycle_icon_description">Recycle Icon</string>
    <string name="learn_more_about_impact">Learn more about your impact</string>
    <string name="water_saved">Water Saved</string>
    <string name="waste_diverted">Waste Diverted from Landfill</string>
    <string name="co2_prevented">CO2 Emissions Prevented</string>
    <string name="money_raised_bar">Money raised</string>
    <string name="cart_icon_description">cart</string>
    <string name="menu_icon_description">menu</string>
    <string name="money_raised">Learn more about your impact</string>
    <string name="sustainability">Sustainability</string>
    <string name="name_hint">Enter your name</string>
    <string name="address_hint">Enter your address</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="total_price">Total Price</string>
    <string name="complete_purchase">Complete Purchase</string>
    <string name="search_hint">Search here...</string>
    <string name="navegation_drawer_open">Open</string>
    <string name="navegation_drawer_close">Close</string>
    <string name="prefs_file">user_prefs</string>
    <string name="log_out">Log Out</string>
    <string name="uniandes_sweater">Uniandes Sweater</string>a
    <string name="price_sweater">$100.00</string>
    <string name="favorite_button_desc">Add to favorites</string>
    <string name="product_description">Uniandes Sweater. I changed to the "Nacho", so I don´t use it anymore.</string>
    <string name="payment_title">Select your payment method</string>
    <string name="billing_address_hint">Billing address</string>
    <string name="billing_city_hint">City</string>
    <string name="billing_zipcode_hint">Postal code</string>
    <string name="proceed_to_confirmation">Proceed to confirmation</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cancel_purchase">Cancel</string>
    <string name="buy">Buy</string>
    <string name="content_desc_product_image">no se que es esto</string>
    <string name="hint_product_quantity">Quantity of the product</string>
    <string name="upload_image_button_text">Upload image</string>
    <string name="publish_button_text">Publish item</string>
    <string name="hint_product_name">Product name</string>
    <string name="hint_product_price">Product price</string>
    <string name="hint_product_description">Product description </string>
    <string name="text_ecofriendly">It is ecofriendly?</string>
    <string name="take_photo_button_text">Take photo</string>
    <string name="hint_product_brand">Product brand</string>




</resources>