<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título en inglés -->
    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Publish a Product"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="16dp" />

    <!-- Campo para ingresar el nombre del producto -->
    <EditText
        android:id="@+id/product_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_product_name"
        android:importantForAutofill="no"
        android:inputType="text" />

    <!-- Texto para el mensaje de error del nombre -->
    <TextView
        android:id="@+id/name_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="gone"
        android:text="Error message"/>

    <!-- Campo para ingresar el precio del producto -->
    <EditText
        android:id="@+id/product_price_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_product_price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <!-- Texto para el mensaje de error del precio -->
    <TextView
        android:id="@+id/price_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="gone"
        android:text="Error message"/>

    <!-- Campo para ingresar la descripción del producto -->
    <EditText
        android:id="@+id/product_description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:hint="@string/hint_product_description"
        android:inputType="textMultiLine" />

    <!-- Texto para el mensaje de error de la descripción -->
    <TextView
        android:id="@+id/description_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="gone"
        android:text="Error message"/>

    <EditText
        android:id="@+id/product_brand_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_product_brand"
        android:importantForAutofill="no"
        android:inputType="text" />

    <!-- Texto para el mensaje de error de la marca -->
    <TextView
        android:id="@+id/brand_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="gone"
        android:text="Error message"/>

    <EditText
        android:id="@+id/product_initialPrice_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="Inital product price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <!-- Texto para el mensaje de error de la marca -->
    <TextView
        android:id="@+id/initialPrice_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="gone"
        android:text="Error message"/>



    <!-- Checkbox para indicar si el producto es eco-friendly -->
    <CheckBox
        android:id="@+id/ecofriendly_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ecofriendly"
        android:minHeight="48dp" />

    <!-- ImageView centrada -->
    <ImageView
        android:id="@+id/product_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_desc_product_image"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_no_image"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/product_quantity_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:hint="@string/hint_product_quantity"
        android:inputType="number" />

    <!-- Texto para el mensaje de error de la cantidad -->
    <TextView
        android:id="@+id/quantity_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="gone"
        android:text="Error message"/>

    <!-- Layout horizontal para mostrar los botones uno al lado del otro -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Botón para subir la imagen del producto -->
        <Button
            android:id="@+id/upload_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_gray"
            android:padding="12dp"
            android:text="@string/upload_image_button_text" />

        <!-- Botón para tomar una foto del producto -->
        <Button
            android:id="@+id/take_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_gray"
            android:padding="12dp"
            android:text="@string/take_photo_button_text" />
    </LinearLayout>

    <!-- Botón para publicar el producto -->
    <Button
        android:id="@+id/publish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_lima_green"
        android:padding="10dp"
        android:text="@string/publish_button_text" />
</LinearLayout>
