<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/gray_light"
    android:gravity="center_horizontal">

    <!-- Título -->
    <TextView
        android:id="@+id/payment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_title"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <!-- Spinner para método de pago -->
    <Spinner
        android:id="@+id/payment_methods_spinner"
        android:layout_width="378dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_white"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:dropDownVerticalOffset="5dp"
        android:gravity="center_vertical"
        android:layoutDirection="ltr"
        android:padding="16dp"
        android:paddingEnd="16dp"
        android:popupBackground="@color/white"
        android:spinnerMode="dropdown" />



    <!-- Información de facturación -->
    <EditText
        android:id="@+id/billing_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/billing_address_hint"
        android:inputType="textPostalAddress"
        android:background="@drawable/rounded_white"
        android:importantForAutofill="yes"
        android:layout_marginBottom="16dp"
        android:padding="8dp" />
    <TextView
        android:id="@+id/billing_address_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:text="Error"
        android:visibility="gone" />

    <EditText
        android:id="@+id/billing_city"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_white"
        android:hint="@string/billing_city_hint"
        android:inputType="text"
        android:importantForAutofill="yes"
        android:layout_marginBottom="16dp"
        android:padding="8dp" />
    <TextView
        android:id="@+id/billing_city_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:text="Error"
        android:visibility="gone" />

    <EditText
        android:id="@+id/billing_zipcode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_white"
        android:hint="@string/billing_zipcode_hint"
        android:inputType="number"
        android:importantForAutofill="yes"
        android:layout_marginBottom="16dp"
        android:padding="8dp" />
    <TextView
        android:id="@+id/billing_zipcode_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:text="Error"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
    android:layout_marginTop="16dp">


    <Button
        android:id="@+id/cancel_purchase_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cancel_purchase"
        android:background="@drawable/rounded_gray"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:layout_marginEnd="8dp"
        />


    <Button
        android:id="@+id/proceed_to_confirmation_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/proceed_to_confirmation"
        android:background="@drawable/rounded_lima_green"
        android:textColor="@android:color/white"
        android:padding="12dp" />
</LinearLayout>



    </LinearLayout>


