<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Product Image -->
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/product_description"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/buzouniandes" />

        <!-- Horizontal Layout for Text and Favorite Icon -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <!-- Product Name -->
            <TextView
                android:id="@+id/product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/uniandes_sweater"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingEnd="8dp" />

            <!-- Favorite Icon -->
            <ImageButton
                android:id="@+id/favorite_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/baseline_favorite_border_24"
                android:contentDescription="@string/favorite_button_desc"
                android:layout_gravity="center" />
        </LinearLayout>

        <!-- Product Price -->
        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_sweater"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:paddingTop="4dp" />
        <Button
            android:id="@+id/add_to_cart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add to cart"
            android:background="@drawable/rounded_lima_green"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
