<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Activity.ProductDetailActivity"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">


                <ImageView
                    android:id="@+id/product_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/buzouniandes" />


                <TextView
                    android:id="@+id/product_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Saco uniandes"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="16dp" />


                <TextView
                    android:id="@+id/product_detail_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 120 000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical">


                    <TextView
                        android:id="@+id/product_detail_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Saco uniandes talla XL. Me cambié a la nacho, ya no uso el saco"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_marginEnd="8dp" />


                    <ImageButton
                        android:id="@+id/favorite_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="12dp"
                        android:background="?attr/selectableItemBackground"
                        android:src="@drawable/baseline_favorite_border_24"
                        android:contentDescription="@string/favorite_button_desc"
                        android:layout_gravity="center" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">

                    <Button
                        android:id="@+id/btn_add_to_cart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_cart"
                        android:textColor="@android:color/white"
                        android:background="@color/dark_green" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_height="match_parent"
        android:layout_width="240dp"
        android:layout_gravity="start"
        android:background="@color/dark_green"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:itemIconPadding="10dp"
        app:itemIconSize="30dp"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/log_out"
                android:textColor="@color/white" />
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
